# SmartResumeAnalyzer

./: .gitignore  README.md  pyproject.toml
sra/: __init__.py  preprocessing.py  resume_classifier.py  semantic_ranker.py
sra/utility/: __init__.py  log_config.py
