[tool.poetry]
name = "Smart Resume Analyzer"
version = "0.1.0"
description = "A system that can automatically analyze and extract insights from resumes (CVs), match them to job descriptions, and rank them based on relevance."
authors = ["Maryam Mohebi <maryam@mohebi.me>"]
readme = "README.md"
packages = [{ include = "sra" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
nltk = "^3.9.1"
spacy = "^3.8.5"
pandas = "^2.2.3"
jupyter = "^1.1.1"
ipywidgets = "^8.1.7"
ipykernel = "^6.29.5"
pdfplumber = "^0.11.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 150
target-version = "py310"
fix = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = ["D100",   # Do not document public modules]

[tool.ruff.lint.pydocstyle]
convention = "google"
